# actix-web-CRUD

./: Cargo.toml  README.md  crud.postman_collection.json  install.sh
migrations/20170124012402_create_users/: up.sql
src/: configure.rs  database.rs  file.rs  handlers.rs  handlers_structs.rs  main.rs  models.rs  requests.rs  schema.rs  user.rs
